--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -129,38 +129,35 @@ input[type="number"] {
   padding: 0 10px;
 
   &--header {
-    max-width: 1720px;
+    max-width: 1920px;
+    padding: 0 Min(2.604vw, 50px);
   }
 }
 
-* {
-  scrollbar-color: #EDF3F6;
+html {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(65, 228, 255, 0.6) rgba(50, 50, 50, 0.1);
 
   &::-webkit-scrollbar {
-    width: 9px;
-    box-shadow: none;
-    height: 100%;
-    display: none;
+    width: 7px;
+    height: 7px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #3C93F0;
-    border-radius: 4px;
-    background-clip: padding-box;
-    border: 2px solid #EDF3F6;
-    box-shadow: none;
+    background-color: rgba(65, 228, 255, 0.4);
+    transition: all .4s;
 
     &:hover {
-      cursor: pointer;
+      background-color: rgba(65, 228, 255, 0.6);
     }
   }
 
   &::-webkit-scrollbar-track {
-    background-color:#EDF3F6;
-    cursor: pointer;
-    border-radius: 6px;
-    box-shadow: none;
-    height: 100%;
+    background-color: rgba(50, 50, 50, 0.1);
+
+    &:hover {
+      background-color: rgba(50, 50, 50, 0.2);
+    }
   }
 
   ::-webkit-scrollbar-button {
