--- a/source/sass/blocks/butons.scss
+++ b/source/sass/blocks/butons.scss
@@ -13,7 +13,10 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: var(--color-a);
-
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   box-shadow: 0px 6px 40px 10px rgba(251,63,255,0.36);
   transition: all .4s;
 
@@ -42,7 +45,6 @@
   border-radius: 12px;
   color: var(--color-a);
   transition: all .4s;
-
   background: radial-gradient(66.58% 146.41% at -2.19% 16.98%, #14BDFF 0%, rgba(3, 57, 89, 0) 74.36%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, radial-gradient(80.2% 129.9% at 96.3% 0%, #C51BFF 0%, rgba(3, 57, 89, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, radial-gradient(72.79% 65.22% at 80.51% 92.28%, rgba(68, 220, 255, 0.71) 0%, rgba(120, 199, 217, 0) 84.87%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #3042FF;
   border: 1px solid rgba(255, 255, 255, 0.21);
   box-shadow: 0px 9px 26px rgba(64, 136, 224, 0.57), inset 0px 4px 13px rgba(255, 255, 255, 0.25);
