--- a/source/sass/blocks/team-list.scss
+++ b/source/sass/blocks/team-list.scss
@@ -1,32 +1,49 @@
 .team-list {
 
-  &__item {
+  &__wrapper {
     position: relative;
-    cursor: pointer;
     transition: all .4s;
     box-shadow: 0px 6px 40px 10px rgba(252, 63, 255, 0);
     max-width: 240px;
+  }
+
+  &__item {
+    position: relative;
+    cursor: pointer;
+    max-width: 240px;
+    width: 100%;
 
 
-    &:hover, &.swiper-slide-active {
-      transform: scale(1.08);
-      box-shadow: 0px 6px 40px 10px #4559c1cc;
+    &:hover, &.swiper-slide-active  {
 
-      .team-list__image::before {
-        opacity: 0;
+      .team-list__wrapper {
+        transform: scale(1.08);
+        box-shadow: 0px 6px 40px 10px #4559c1cc;
+
+        .team-list__image::before {
+          opacity: 0;
+        }
+
+        .team-list__image:after {
+          opacity: 0;
+        }
+
+        .team-list__descr {
+          box-shadow: inset 0 -90px 31px -20px rgba(0,0,0,0.81);
+        }
+
+        .team-list__position {
+          opacity: 1;
+        }
       }
 
-      .team-list__image:after {
-        opacity: 0;
-      }
 
-      .team-list__descr {
-        box-shadow: inset 0 -90px 31px -20px rgba(0,0,0,0.81);
-      }
+    }
 
-      .team-list__position {
-        opacity: 1;
-      }
+    @media (max-width: 1024px) {
+      max-width: initial;
+      width: fit-content;
+      padding: 0 15px;
     }
   }
 
@@ -79,7 +96,7 @@
       width: 100%;
       height: 100%;
       background-image: var(--photo-bg);
-      opacity: .85;
+      opacity: .7;
       left: 0;
       top: 0;
       @include bg_position;
