--- a/source/sass/blocks/first-section.scss
+++ b/source/sass/blocks/first-section.scss
@@ -3,7 +3,7 @@
 
   padding-top: calc(clamp(50px, 5.645vw, 70px) + var(--header-min-height));
 
-  background-image: url(../img/index-bg.png);
+  background-image: url(../img/index-bg.webp);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
