--- a/source/sass/blocks/games-section.scss
+++ b/source/sass/blocks/games-section.scss
@@ -4,7 +4,7 @@
   padding-top: clamp(100px, 12.879vw, 170px);
   padding-bottom: clamp(50px, 10.606vw, 140px);
 
-  background-image: url(../img/game-bg.png);
+  background-image: url(../img/game-bg.webp);
   background-attachment: fixed;
   box-shadow: inset 0px 40px 42px -13px #000000,inset 0px -40px 42px -13px #000000;
 
