--- a/source/sass/blocks/list-section.scss
+++ b/source/sass/blocks/list-section.scss
@@ -6,7 +6,7 @@
     padding-top: clamp(80px, 15.323vw, 190px);
   }
 
-  background-image: url(../img/list-section-bg.png);
+  background-image: url(../img/list-section-bg.webp);
   @include bg_position;
 
   &__title {
