--- a/source/sass/blocks/our-team.scss
+++ b/source/sass/blocks/our-team.scss
@@ -1,7 +1,7 @@
 .our-team {
   padding-top: clamp(80px, 16.818vw, 222px);
   padding-bottom: clamp(100px, 19.394vw, 256px);
-  background-image: url(../img/list-section-bg.png);
+  background-image: url(../img/list-section-bg.webp);
   @include bg_position;
 
   &__container {
