--- a/source/sass/blocks/tokenomics.scss
+++ b/source/sass/blocks/tokenomics.scss
@@ -2,7 +2,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-image: url(../img/tokenomics/bg.png);
+  background-image: url(../img/tokenomics/bg.webp);
   padding-top: clamp(100px, 15.152vw, 200px);
   padding-bottom: clamp(80px, 13.636vw, 180px);
 
@@ -18,7 +18,7 @@
 
   &__image {
     position: relative;
-    background-image: url(../img/tokenomics/circle-overlay.png);
+    background-image: url(../img/tokenomics/circle-overlay.webp);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
