--- a/source/sass/blocks/welcome.scss
+++ b/source/sass/blocks/welcome.scss
@@ -1,7 +1,7 @@
 .welcome {
   padding-top:clamp(50px, 7.576vw, 100px) ;
   padding-bottom: clamp(40px, 3.788vw, 50px);
-  background-image: url(../img/city.png);
+  background-image: url(../img/city.webp);
   background-position: bottom center;
   background-size: cover;
 
