--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -30,4 +30,5 @@
 @import "blocks/footer.scss";
 @import "blocks/mobile-menu.scss";
 @import "blocks/regestration.scss";
+@import "blocks/connect-modal.scss";
 
