--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -134,7 +134,7 @@ input[type="number"] {
   }
 }
 
-html {
+* {
   scrollbar-width: thin;
   scrollbar-color: rgba(65, 228, 255, 0.6) rgba(50, 50, 50, 0.1);
 
