--- a/source/sass/general/variables.scss
+++ b/source/sass/general/variables.scss
@@ -1,7 +1,7 @@
 :root {
     /* -- Fonts --*/
   --font-family: "Gotham Pro", sans-serif; // var(--font-family);
-  --header-min-height: ;
+  --header-min-height: 163px;
   // text color
   --color-a: #ffffff; // var(--color-a);
   --color-b: #000000; // var(--color-b);
