--- a/source/sass/blocks/info-list.scss
+++ b/source/sass/blocks/info-list.scss
@@ -18,8 +18,8 @@
 
     &::before {
       content: counter(li, decimal) " ";
-      width: clamp(30px, 4.516vw, 56px);
-      height: clamp(30px, 4.516vw, 56px);
+      width: clamp(40px, 4.516vw, 56px);
+      height: clamp(40px, 4.516vw, 56px);
 
       font-weight: 600;
       font-size: 16px;
@@ -36,7 +36,7 @@
 
       background:var(--opacity-counter-bg);
       // opacity: .3;
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      // border: 1px solid rgba(255, 255, 255, 0.3);
 
       @include dfc;
       flex-shrink: 0;
