--- a/source/sass/blocks/items-list.scss
+++ b/source/sass/blocks/items-list.scss
@@ -9,6 +9,10 @@
     transition: all .4s;
     box-shadow: 0px 6px 40px 10px rgba(252, 63, 255, 0);
 
+    @media screen and (max-width: 767px) {
+      box-shadow: none !important;
+    }
+
     &::before {
       @include psevdo;
       width: 100%;
