--- a/source/sass/blocks/games-list.scss
+++ b/source/sass/blocks/games-list.scss
@@ -8,9 +8,14 @@
     @include dfc;
 
     width: clamp(142px,22.727vw, 300px);
+
+    @media screen and (min-width: 1024px) {
+      max-width: 20%;
+    }
   }
 
   &__image {
+    display: flex;
     width: 100%;
     transition: all .4s;
     box-shadow: 0px 6px 40px 10px rgba(252, 63, 255, 0);
