--- a/source/sass/blocks/partners.scss
+++ b/source/sass/blocks/partners.scss
@@ -14,9 +14,27 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    @media (max-width:575px) {
-      grid-template-columns: 100%;
+    @media (max-width: 767px) {
+      display: flex;
+      flex-wrap: nowrap;
+      overflow-y: scroll;
+      justify-content: flex-start;
+      padding-bottom: 20px;
       grid-gap: 30px;
+      grid-template-columns: initial;
+
+      margin: 0 -20px;
+      padding: 0 20px 20px;
+
+      .items-list__item {
+        flex-shrink: 0;
+
+        .items-list__link::before {
+          display: none;
+        }
+      }
     }
   }
+
+
 }
