--- a/source/sass/blocks/regestration.scss
+++ b/source/sass/blocks/regestration.scss
@@ -48,6 +48,17 @@
 
   .container {
     height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 50px;
+  }
+
+  .forgot {
+    width: fit-content;
+    display: block;
+    margin: 10px 0 0 auto;
+    font-size: 14px;
   }
 
   &__box {
@@ -216,6 +227,7 @@
       margin-bottom: -1px;
       margin-right: -1px;
       z-index: 2;
+      min-width: initial;
     }
 
     @media (max-width:575px) {
@@ -297,4 +309,9 @@
   &.active {
     display: block;
   }
+}
+
+
+.regestration__form-btn {
+  min-width: initial;
 }
