--- a/source/sass/blocks/roadmap-list.scss
+++ b/source/sass/blocks/roadmap-list.scss
@@ -4,6 +4,16 @@
   justify-content: center;
   grid-gap: 20px clamp(15px, 1.515vw, 20px);
 
+  @media screen and (max-width: 767px) {
+    flex-wrap: nowrap;
+    padding-bottom: 20px;
+    overflow-y: scroll;
+    justify-content: flex-start;
+
+    margin: 0 -20px;
+    padding: 0 20px 20px;
+  }
+
   &__item {
     display: flex;
     flex-direction: column;
@@ -36,7 +46,14 @@
       transform: scale(1.08);
       box-shadow: 0px 6px 40px 10px #4559c1cc;
     }
+
+    @media screen and (max-width: 767px) {
+      flex-shrink: 0;
+      box-shadow: none !important;
+    }
   }
+
+
 
   &__title {
     font-family: var(--font-family);
