--- a/source/sass/blocks/team-list.scss
+++ b/source/sass/blocks/team-list.scss
@@ -9,7 +9,7 @@
 
   &__item {
     position: relative;
-    cursor: pointer;
+    // cursor: pointer;
     max-width: 240px;
     width: 100%;
 
@@ -35,6 +35,15 @@
         .team-list__position {
           opacity: 1;
         }
+
+
+        picture::before {
+          opacity: 0;
+        }
+
+        img {
+          filter: grayscale(0);
+        }
       }
 
 
@@ -55,7 +64,7 @@
     text-align: center;
     width: 100%;
     bottom: 0;
-    z-index: 2;
+    z-index: 5;
     padding: 50px 0 11px;
     transition: all .4s;
     box-shadow: inset 0px -50px 49px -13px rgba(0,0,0,0);
@@ -91,17 +100,48 @@
     position: relative;
     display: flex;
 
+    .flag {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 20;
+    }
+
+    picture {
+      position: relative;
+
+      &::before {
+        @include psevdo;
+        background-image: var(--image-mask);
+        opacity: .73;
+        left: -3px;
+        top: -3px;
+        bottom: -3px;
+        right: -3px;
+        @include bg_position;
+        transition: all .6s;
+        // transition-delay: .4s;
+        z-index: 1;
+      }
+
+      img {
+        filter: grayscale(70%);
+        transition: .2;
+      }
+    }
+
     &::before {
       @include psevdo;
-      width: 100%;
-      height: 100%;
-      background-image: var(--photo-bg);
-      opacity: .7;
-      left: 0;
-      top: 0;
+      background-image: var(--photo-bg-team);
+      opacity: .73;
+      left: -3px;
+      top: -3px;
+      bottom: -3px;
+      right: -3px;
       @include bg_position;
       transition: all .6s;
       // transition-delay: .4s;
+      z-index: 2;
     }
 
     &::after {
@@ -113,6 +153,7 @@
       top: 0;
       @include bg_position;
       transition: all .4s;
+      z-index: 3;
 
     }
   }
@@ -128,18 +169,51 @@
         opacity: 1;
         transform: scale(1.15);
       }
+
     }
   }
 
   @media (min-width: 1024px) {
-
-
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: clamp(15px, 2.273vw, 30px);
 
     &__item {
       flex-shrink: initial;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    grid-gap: clamp(15px, 2.273vw, 30px);
+
+    &__item {
+      width: 23%;
+      max-width: 100%;
+      padding: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    overflow-x: scroll;
+    grid-gap: 20px;
+    padding: 0 0 20px;
+
+    &__item {
+      max-width: 240px;
+      width: 100%;
+      flex-shrink: 0;
+      padding: 0;
+    }
+
+    &__wrapper {
+      transform: scale(1) !important;
+      box-shadow: none !important;
     }
   }
 }
