--- a/source/sass/blocks/welcome-list.scss
+++ b/source/sass/blocks/welcome-list.scss
@@ -5,8 +5,23 @@
 
   &__item {
     position: absolute;
-    box-shadow: 0px 6px 40px 10px #455ac132;
     display: flex;
+
+    picture {
+      position: relative;
+
+      &::before {
+        @include psevdo;
+        background: transparent;
+        left: 1px;
+        top: 1px;
+        bottom: 1px;
+        right: 1px;
+        @include bg_position;
+        border: .5px solid rgba(255, 255, 255, 0.25);
+        z-index: 1;
+      }
+    }
 
     &:nth-child(1) {
       bottom: 10%;
@@ -39,6 +54,10 @@
       animation: float 8s linear infinite;
       bottom: 50%;
       left: 68%;
+
+      picture:before {
+        display: none;
+      }
 
       width: Min(4.318vw, 57px);
       height: auto;
